--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  audioplayers: ^3.0.1
   flutter:
     sdk: flutter
 
@@ -56,7 +57,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/music/beep.mp3
+    - assets/beep.mp3
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
